# HeatEquationNumericalSolution

./: .gitignore  CMakeLists.txt  md2pdf.ps1  output.txt  readme.md  results.md  run.ps1
HENS_plot/: main.py  plot.py  pyproject.toml
include/: HENS_math_core.h  HENS_matrix.h
src/: HENS.cpp  HENS_math_core.cpp  HENS_matrix.cpp
